# ProcessPlayground

./: .gitignore  Directory.Build.props  NUGET_PACKAGING.md  ProcessPlayground.slnx  README.md  build-package.ps1  build-package.sh  spec.md
.github/: copilot-instructions.md
.github/workflows/: dotnet.yml
AVRepro/: AVRepro.csproj  Program.cs
Benchmarks/: Benchmarks.csproj  Discard.cs  KillTree.cs  NoRedirection.cs  Print.cs  Program.cs  ReadBoth.cs  RedirectToFile.cs  RedirectToPipe.cs
BenchmarksGo/: README.md  discard_test.go  go.mod  main.go  no_redirection_test.go  redirect_to_file_test.go  redirect_to_pipe_test.go
BenchmarksRust/: Cargo.toml  README.md
BenchmarksRust/benches/: discard.rs  no_redirection.rs  redirect_to_file.rs  redirect_to_pipe.rs
BenchmarksRust/src/: lib.rs
ConsoleApp/: ConsoleApp.csproj  Program.cs
SizeOnDiskNew/: Program.cs  SizeOnDiskNew.csproj
SizeOnDiskOld/: Program.cs
Tests/: AnonymousPipeTests.cs  AssemblyInfo.cs  CombinedOutputTests.cs  ConditionalTests.cs  CreatePipeTests.cs  CreateSuspendedTests.cs  FireAndForgetTests.cs  InheritedHandlesTests.cs  NamedPipeTests.Unix.cs  NamedPipeTests.cs  NullHandleTests.cs  OpenProcessTests.cs  PipingTests.cs  ProcessOutputTests.cs  ProcessStartOptionsResolvePathTests.cs  ProcessTests.cs  ReadOutputLinesTests.cs  RedirectionTests.cs  SafeChildProcessHandleTests.Unix.cs  SafeChildProcessHandleTests.Windows.cs  SafeChildProcessHandleTests.cs  SameFileDescriptorTests.cs  SocketTests.Unix.cs  SocketTests.cs  StartDetachedTests.cs  Tests.csproj
Tests/System/: OperatingSystem.cs
